Thu Dec 19 18:47:29 2002  Steve Huston  <shuston@riverace.com>

        * tests/tests.mpc: Added Obstack_Test and Recursive_Condition_Test.

Thu Dec 19 16:47:17 2002  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/SOCK_Dgram.h:
	  ace/SOCK_CODgram.h: Added metatype information for
 	  ACE_SOCK_Dgram and ACE_SOCK_CODgram.  Thanks to Sankaranarayanan
 	  K V <sankar@migv.mot.com> for reporting this.

Thu Dec 19 10:02:56 2002  Rich Seibel <seibel_r@ociweb.com>

        * tests/MM_Shared_Memory_Test.cpp

          removed extraneous line that made the test appear to fail

Thu Dec 19 06:47:07 2002  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/config/aceversion.mpb:
        * bin/MakeProjectCreator/config/taoversion.mpb:

          Updated the version to reflect the current release version.

        * bin/MakeProjectCreator/modules/Driver.pm:

          Moved the Cwd::getcwd() outside the loop to avoid calling it
          multiple times.

        * bin/MakeProjectCreator/templates/vc7.mpd:

          Modified the ProgramDatabaseFile to use the intermediate_dir as
          the output location.  Thanks to Steve Huston
          <shuston@riverace.com> for reporting it.

Wed Dec 18 20:52:41 2002  Steve Huston  <shuston@riverace.com>

        * ace/SOCK_Dgram_Mcast.cpp (open_i): Call shared_open using the
          protocol family from the specified address, not PF_INET. Allows
          working with IPv6.

        * tests/Multicast_Test.cpp: If join fails, log the error reason.

Wed Dec 18 19:57:51 2002  Steve Huston  <shuston@riverace.com>

        * ace/config-sunos5.7.h: Added ACE_HAS_SNPRINTF. I have verified
          that it's available from Solaris 7 on. If someone can determine
          it's available earlier, please move the definition to one of the
          earlier-version config-sunos5.*.h files.

Wed Dec 18 18:59:41 2002  Steve Huston  <shuston@riverace.com>

        * ace/ace.mpc: